<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/catan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_medium"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/player_text_size"
                android:textColor="@android:color/black"
                android:text="@string/player_one" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/player_text_size"
                android:textColor="@android:color/black"
                android:text="@string/victory_points" />

            <TextView
                android:id="@+id/player_one_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/score_text_size"
                android:textColor="@android:color/black"
                android:text="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/button_settlement"
                android:onClick="addSettlementForP1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/button_city"
                android:onClick="addCityForP1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/button_development_card"
                android:onClick="addDevelopmentCardForP1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/longest_road_button"
                android:onClick="addLongestRoadForP1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/button_largest_army"
                android:onClick="addLargestArmyForP1" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@android:color/holo_red_light" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_medium"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/player_text_size"
                android:textColor="@android:color/black"
                android:text="@string/player_two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/player_text_size"
                android:textColor="@android:color/black"
                android:text="@string/victory_points" />

            <TextView
                android:id="@+id/player_two_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/score_text_size"
                android:textColor="@android:color/black"
                android:text="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/button_settlement"
                android:onClick="addSettlementForP2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/button_city"
                android:onClick="addCityForP2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/button_development_card"
                android:onClick="addDevelopmentCardForP2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/longest_road_button"
                android:onClick="addLongestRoadForP2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textAllCaps="true"
                android:text="@string/button_largest_army"
                android:onClick="addLargestArmyForP2" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset_button" />

</RelativeLayout>